--- a/pom.xml
+++ b/pom.xml
@@ -3,8 +3,20 @@
   <groupId>luasbangundatar</groupId>
   <artifactId>luasbangundatar</artifactId>
   <version>0.3.5</version>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>16</source>
+                    <target>16</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
-<dependencies>
+    <dependencies>
   <dependency>
     <groupId>junit</groupId>
     <artifactId>junit</artifactId>
