--- a/pom.xml
+++ b/pom.xml
@@ -3,8 +3,20 @@
   <groupId>luasbangundatar</groupId>
   <artifactId>luasbangundatar</artifactId>
   <version>1.0.0</version>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>14</source>
+                    <target>14</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
-<dependencies>
+    <dependencies>
   <dependency>
     <groupId>junit</groupId>
     <artifactId>junit</artifactId>
