--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -22,5 +22,8 @@ jobs:
         java-version: '17'
         distribution: 'temurin'
         cache: maven
-    - name: Build with Maven
-      run: mvn -B package --file pom.xml
+    - name: Build, test, and analyze
+      env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+      run: mvn verify sonar:sonar -Dsonar.host.url=https://sonarcloud.io -Dsonar.organization=vidifadilakbar -Dsonar.projectKey=vidifadilakbar_luas-bangun-datar
