--- a/pom.xml
+++ b/pom.xml
@@ -1,16 +1,16 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>com.luasbangundatar</groupId>
-  <artifactId>menghitungluas</artifactId>
-  <version>0.3.5</version>
+  <groupId>contohprojectmaven</groupId>
+  <artifactId>contohproject</artifactId>
+  <version>1.0.0</version>
     <build>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>16</source>
-                    <target>16</target>
+                    <source>14</source>
+                    <target>14</target>
                 </configuration>
             </plugin>
         </plugins>
@@ -25,12 +25,12 @@
 </dependencies>
 
 <distributionManagement>
-   <repository>
-     <id>github</id>
-     <name>GitHub Apache Maven Packages</name>
-     <url>https://maven.pkg.github.com/vidifadilakbar/luas-bangun-datar</url>
-   </repository>
-</distributionManagement>
+    <repository>
+      <id>github</id>
+      <name>GitHub Packages</name>
+      <url>https://maven.pkg.github.com/vidifadilakbar/luas-bangun-datar</url>
+    </repository>
+  </distributionManagement>
   
   <properties>
      <maven.compiler.source>1.8</maven.compiler.source>
